fixed stretched image

--- a/css/works/posters.css
+++ b/css/works/posters.css
@@ -18,6 +18,7 @@
   margin-left: 5%;
   width: 47.5%;
   display: inline-block;
+  object-fit: contain;
 }
 
 .img-wrapper {
